WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
89489
Account for device scale factor when creating image for dragging.
https://bugs.webkit.org/show_bug.cgi?id=89489
Summary
Account for device scale factor when creating image for dragging.
Varun Jain
Reported
2012-06-19 11:36:34 PDT
Account for device scale factor when creating image for dragging.
Attachments
Patch
(2.56 KB, patch)
2012-06-19 11:39 PDT
,
Varun Jain
no flags
Details
Formatted Diff
Diff
Patch
(4.19 KB, patch)
2012-06-19 16:29 PDT
,
Varun Jain
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Varun Jain
Comment 1
2012-06-19 11:39:39 PDT
Created
attachment 148376
[details]
Patch
Adam Barth
Comment 2
2012-06-19 15:53:26 PDT
Comment on
attachment 148376
[details]
Patch I've asked varunjain to add a ManualTest for this bug.
Varun Jain
Comment 3
2012-06-19 16:29:21 PDT
Created
attachment 148455
[details]
Patch
Varun Jain
Comment 4
2012-06-19 16:29:56 PDT
(In reply to
comment #2
)
> (From update of
attachment 148376
[details]
) > I've asked varunjain to add a ManualTest for this bug.
Added ManualTest. PTAL.
Beth Dakin
Comment 5
2012-06-20 11:22:45 PDT
Can you please provide reproducible steps for this bug? I don't see any problems with drag images using Safari on a Retina MacBook Pro.
Beth Dakin
Comment 6
2012-06-20 11:26:48 PDT
Oh, I see. Looks like we fixed this in Mac-only code:
https://bugs.webkit.org/show_bug.cgi?id=67779
Beth Dakin
Comment 7
2012-06-20 11:27:31 PDT
Also:
https://bugs.webkit.org/show_bug.cgi?id=67802
Adam Barth
Comment 8
2012-06-20 12:52:34 PDT
Beth, will this patch cause a problem for the apple-mac port? If so, should we move the conversion from apple-mac specific code to cross-platform code?
Beth Dakin
Comment 9
2012-06-20 13:11:40 PDT
No, this should not cause any problems for Apple Mac. It looks like all of the functions that are patched here are inside this ifdef: #if !PLATFORM(MAC) && !PLATFORM(WIN) So we're all set. I think this is a fine way to go.
Adam Barth
Comment 10
2012-06-20 14:06:02 PDT
Beth, do you agree?
Adam Barth
Comment 11
2012-06-20 14:52:32 PDT
I fail at reading. Sorry for the noise.
WebKit Review Bot
Comment 12
2012-06-20 15:49:27 PDT
Comment on
attachment 148455
[details]
Patch Clearing flags on attachment: 148455 Committed
r120876
: <
http://trac.webkit.org/changeset/120876
>
WebKit Review Bot
Comment 13
2012-06-20 15:49:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug